--- a/src/App.css
+++ b/src/App.css
@@ -60,12 +60,13 @@ nav {
   font-size: 1.5rem;
   cursor: pointer;
 }
+/* Home.css */
+
 .home-banner-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
-  position: relative;
+  padding: 20px; /* Espace autour de l'ensemble du contenu */
 }
 
 .home-text-section {
@@ -73,61 +74,28 @@ nav {
 }
 
 .home-bannerImage-container {
-  position: relative;
-  width: 50%;
+  max-width: 45%;
+  background-color: rgba(0, 0, 0, 0.1); /* Fond légèrement grisé */
+  padding: 20px; /* Espace autour du contenu */
+  border-radius: 10px; /* Coins arrondis */
 }
 
-.banner-image {
+.round-image {
   width: 100%;
   height: auto;
-  border-radius: 20px; /* Coins légèrement arrondis */
+  border-radius: 10%; /* Coins légèrement arrondis */
+  object-fit: cover;
+  border: 3px solid white; /* Bordure blanche autour des images */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .overlay-images {
-  position: absolute;
-  top: 10px; /* Ajustez selon vos besoins */
-  left: 40%; /* Décale les images vers la gauche */
-  transform: translateX(-50%);
   display: flex;
   flex-direction: column;
   gap: 10px;
   align-items: center;
 }
 
-.image-row {
-  display: flex;
-  gap: 10px;
-  margin-left: -50px; /* Décale les images de la première rangée vers la gauche */
-}
-
-.single-image {
-  position: relative;
-  margin-left: 50px; /* Décale l'image unique en dessous vers la droite */
-}
-
-.round-image {
-  width: 300px; /* Ajustez la taille selon vos besoins */
-  height: 300px; /* Ajustez la taille selon vos besoins */
-  border-radius: 50%;
-  object-fit: cover;
-  border: 3px solid white; /* Bordure blanche autour des images */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Ombre pour un effet de profondeur */
-}
-
-
-
-.primary-heading {
-  font-size: clamp(2rem, 5vw, 4rem);
-  color: #4c4c4c;
-  /* line-height: 5rem; */
-  max-width: 600px;
-}
-.primary-text {
-  font-size: clamp(1rem, 3vw, 1.5rem);
-  max-width: 500px;
-  color: #6a6a6a;
-  margin: 1.5rem 0rem;
-}
 .secondary-button {
   padding: 1rem 2.5rem;
   background-color: #fe9e0d;
@@ -143,6 +111,92 @@ nav {
   align-items: center;
   justify-content: center;
 }
+
+.services-container {
+  width: 100%;
+  color: white;
+  margin-top: 10px;
+}
+
+.services-content {
+  max-width: 1200px;
+  padding: 16px;
+  margin: 0 auto;
+}
+
+.services-header {
+  padding-bottom: 32px;
+}
+
+.services-title {
+  font-size: 32px;
+  font-weight: bold;
+  border-bottom: 4px solid gray;
+  display: inline-block;
+}
+
+.services-subtitle {
+  padding-top: 16px;
+  font-size: 18px;
+}
+
+.services-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 16px;
+}
+
+.service-item {
+  box-shadow: 0 4px 8px rgba(128, 128, 128, 0.6);
+  border-radius: 8px;
+  overflow: hidden;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-bottom: 20px; /* Ajout de marge en bas */
+}
+
+.portfolio-img {
+  width: 100%;
+  height: 200px; /* Fixer la hauteur des images pour qu'elles soient toutes égales */
+  object-fit: cover; /* Ajuster les images pour couvrir l'espace disponible */
+  transition: transform 0.2s;
+}
+
+.portfolio-img:hover {
+  transform: scale(1.05);
+}
+
+.service-title {
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 8px;
+  flex-grow: 1; /* Assure que le texte prend de la place verticale disponible */
+}
+
+.service-buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+.portfolio-button {
+  padding: 8px 16px;
+  background-color: #fe9e0d;
+  border: none;
+  border-radius: 50px;
+  font-size: 16px;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.portfolio-button:hover {
+  background-color: #e48f0f;
+}
+
+
 .secondary-button svg {
   margin-left: 0.75rem;
   font-size: 1.5rem;
@@ -181,25 +235,7 @@ nav {
   margin-top: 2rem;
   display: flex;
 }
-.watch-video-button {
-  margin-left: 2rem;
-  background-color: transparent;
-  outline: none;
-  border: none;
-  border-radius: 5rem;
-  font-size: 1.1rem;
-  cursor: pointer;
-  font-weight: 600;
-  color: #484848;
-  transition: 0.2s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.watch-video-button svg {
-  font-size: 3rem;
-  margin-right: 1rem;
-}
+
 .contact-page-wrapper h1 {
   max-width: 900px !important;
 }
@@ -632,9 +668,7 @@ nav {
   }
 }
 @media (max-width: 600px) {
-  .home-bannerImage-container,
-  .about-background-image-container {
-    display: none;
-  }
+  
+
   
 }
